--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-<link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
     <title>Hello from Electron renderer!</title>
@@ -13,6 +13,7 @@
     <h1>Hello from Electron renderer!</h1>
     <p>👋</p>
     <p id="info"></p>
+    <p>Hello and this is working</p>
 </body>
 <script src="./renderer.js"></script>
 
